--- a/_scss/main.css
+++ b/_scss/main.css
@@ -319,9 +319,16 @@ h1.intro-ext {
   text-align: right;
 }
 
+@media screen and (min-width: 768px) {
+  h1.intro-ext {
+    text-align: none;
+  }
+}
+
 .side img {
-  width: 80%;
-  margin-right: -1.15rem;
+  width: 100%;
+  display: block;
+  margin: auto 1.15rem;
 }
 
 p.about-ext {
